--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -13,6 +12,10 @@
     <style>
       body {
         font-family: 'Poppins', sans-serif;
+      }
+      html {
+        scroll-behavior: smooth;
+        scroll-padding-top: 5rem; /* 80px, header height */
       }
     </style>
 <script type="importmap">
